added Dev branch

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                     <div class="arrow">
                         <!-- <li><a href="/new.html">New In</a></li> -->
                         <h2 class="heading-5">DISCOVER MORE </h2>
-                        <li><a href="/page1.html">
+                        <li><a href="/404.html">
                             <svg class="icon-click" >
                                 <use xlink:href="/css/img/sprite.svg#icon-chevron-small-right" ></use>
                             </svg> 
@@ -415,7 +415,7 @@
         <section class="session-8">
             <div class="arrow">
                 <p class="heading-55">SUBSCRIBE TO THE FERRARI NEWSLETTERS</p>
-                <li><a href="/page1.html">
+                <li><a href="/404.html">
                     <svg class="search__icon-2" id="icon2fill" class="rainbow"  >
                         <use xlink:href="/css/img/sprite.svg#icon-chevron-small-right"></use>
                     </svg> 
